# cargo-link

./: Cargo.toml
src/: main.rs
