[package]
name = "cargo-link"
version = "0.1.0"
authors = ["Cecile Tonglet <cecile.tonglet@cecton.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.9.1"
structopt = "0.3.8"
itertools = "0.8.2"
url = "2.1.1"
